fixed gap height for logos

--- a/src/components/pages/About.css
+++ b/src/components/pages/About.css
@@ -17,6 +17,10 @@
   flex-wrap: wrap;
   padding-left: 0;
   padding-bottom: 200px;
-  gap: 20px 100px;
+  gap: 30px 100px;
   justify-content: center;
+}
+
+.logo {
+  text-align: center;
 }
